[project]
name = "deltav"
version = "0.0.1-dev"
description = "A typed python client for the SpaceTraders.io game API"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "tomlkit>=0.13.2",
]

[tool.basedpyright]
reportExplicitAny = false

[tool.ruff.format]
quote-style = "single"
